--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,3 +1,19 @@
-nav {
-    border: 1px solid pink;
+header {
+    grid-area: hd;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid purple;
+}
+
+
+.nav-links {
+    display: flex;
+    list-style-type: none;
+
+}
+
+.nav-links li {
+    padding-right: 10px;
 }
